--- a/styles/paper-kit.css
+++ b/styles/paper-kit.css
@@ -8185,3 +8185,18 @@ License - nucleoapp.com/license/
 }
 
 /*# sourceMappingURL=kit-free.css.map */
+
+.title-1 {
+  font-size: 6em;
+  font-weight: 700;
+  flex-wrap: wrap;
+  margin: 0;
+  color: #FFFFFF;
+  background: #fbf8ec;
+  background: -moz-linear-gradient(top, #FFFFFF 35%, #4e6773 100%);
+  background: -webkit-linear-gradient(top, #FFFFFF 35%, #4e6773 100%);
+  background: -ms-linear-gradient(top, #FFFFFF 35%, #4e6773 100%);
+  background: linear-gradient(to bottom, #FFFFFF 35%, #4e6773 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
