--- a/styles/paper-kit.css
+++ b/styles/paper-kit.css
@@ -8187,8 +8187,8 @@ License - nucleoapp.com/license/
 /*# sourceMappingURL=kit-free.css.map */
 
 .title-1 {
-  font-size: 6em;
-  font-weight: 700;
+  font-size: 3em;
+  font-weight: auto;
   flex-wrap: wrap;
   margin: 0;
   color: #FFFFFF;
